# Aurebesh-Droid

./: .gitattributes  .gitignore  .gitmodules  Aptfile  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  Procfile  README.md  aurebesh-droid  run-dev.sh  run-release.sh  run.sh  start-worker.sh
.github/workflows/: build.yml
src/: aurebesh.hpp  commands.hpp  holocron.hpp  main.cpp  render_aurebesh.hpp
src/render_aurebesh/: render_aurebesh.cpp  render_aurebesh.hpp  stb_image_write.h  stb_truetype.h
